tests/lean/eagerUnfoldingIssue.lean.expected.out
eagerUnfoldingIssue.lean:6:2-6:17: error: failed to synthesize instance
  MonadLog (StateM Nat)
eagerUnfoldingIssue.lean:12:2-12:17: error: failed to synthesize instance
  MonadLog (StateM Nat)
